test/configCases/errors/multi-entry-missing-module/test.config.js
module.exports = {
	findBundle: function () {
		return [
			// TODO improve me?
			// "./a.js",
			// "./b.js",
			"./bundle0.js"
		];
	}
};
